update more api
